# src/modules/instructor/useCases/updateInstructor/UpdateInstructorUseCase.ts
@@ -13,7 +13,6 @@ interface IRequest {
   phone: string;
   email: string;
   id_dojo: string;
-  id_graduation: string;
 }
 
 class UpdateInstructorUseCase {
@@ -29,7 +28,6 @@ class UpdateInstructorUseCase {
     city,
     country,
     state,
-    id_graduation,
     id_dojo,
   }: IRequest): Promise<Instructor> {
     try {
@@ -43,7 +41,6 @@ class UpdateInstructorUseCase {
         city,
         country,
         state,
-        id_graduation,
         id_dojo,
       });
     } catch (error) {
