# src/modules/student/useCases/createStudent/CreateStudentController.ts
@@ -18,7 +18,6 @@ class CreateStudentController {
       city: z.string(),
       country: z.string(),
       state: z.string(),
-      id_graduation: z.string(),
       id_dojo: z.string(),
       responsible: z.string(),
       responsible_phone: z.string(),
@@ -35,7 +34,6 @@ class CreateStudentController {
         city,
         country,
         state,
-        id_graduation,
         id_dojo,
         responsible,
         responsible_phone,
@@ -55,7 +53,6 @@ class CreateStudentController {
         city,
         country,
         state,
-        id_graduation,
         id_dojo,
         responsible,
         responsible_phone,
