# src/modules/student/useCases/updateStudent/UpdateStudentController.ts
@@ -18,7 +18,6 @@ class UpdateStudentController {
       city: z.string(),
       country: z.string(),
       state: z.string(),
-      id_graduation: z.string(),
       id_dojo: z.string(),
       responsible: z.string(),
       responsible_phone: z.string(),
@@ -36,7 +35,6 @@ class UpdateStudentController {
         city,
         country,
         state,
-        id_graduation,
         id_dojo,
         responsible,
         responsible_phone,
@@ -53,7 +51,6 @@ class UpdateStudentController {
         city,
         country,
         state,
-        id_graduation,
         id_dojo,
         responsible,
         responsible_phone,
